--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.servlet.context-path=/api
 springdoc.api-docs.path=/api-docs
+management.endpoints.web.exposure.include=*
+logging.level.root=INFO
+spring.cache.type=caffeine
